[tool.poetry]
name = "pvs-testing"
version = "0.1.0"
description = ""
authors = ["C8P9BJ_Zilver <Kurtis.Odom@CignaHealthcare.com>"]
packages = [
    { include = "pvs_testing" }
]

[tool.poetry.dependencies]
python = "^3.9"
teradatasql = "^20.0.0.25"
pandas = "^2.2.3"

[tool.poetry.scripts]
pvs_testing = "pvs_testing.pvs_testing:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["pvs_testing"]
testpaths = ["tests"]
addopts = "-ra -q"
